<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/Discover" />

    <item
        android:id="@+id/navigation_myloan"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/myloan" />
    <item
        android:id="@+id/navigation_currentbook"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Currentbook" />

    <item
        android:id="@+id/navigation_snippetbookshelf"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Snippetbookshelf" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/More" />
</menu>
